# holoapi

./: .env.sample  .gitignore  README.md  app.py  application.py  holoapi.py  logger.py  pyproject.toml  settings.py
app/: holodule.py  settings.py
config/: nginx.conf  settings.py
models/: holodule.py  user.py
