[tool.poetry]
name = "holoapi"
version = "0.1.0"
description = ""
authors = ["kerobot"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.6.0"
python-dotenv = "^0.15.0"
pymongo = "^3.11.1"
Flask = "^1.1.2"
gunicorn = "^20.0.4"
Flask-JWT = "^0.3.2"
flask-cors = "^3.0.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
