[tool.poetry]
name = "holoapi"
version = "0.1.0"
description = ""
authors = ["kerobot"]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.15.0"
pymongo = "^3.11.1"
gunicorn = "^20.0.4"
flask = "^2.2.2"
flask-cors = "^3.0.10"
pylint = "^2.15.10"
flask-jwt-extended = "^4.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
